finished styling, fixed overlap on footer

--- a/fish-game/src/index.css
+++ b/fish-game/src/index.css
@@ -18,6 +18,7 @@ body {
   
   position: relative;
   min-height: 100vh;
+
   
 }
 
@@ -31,6 +32,7 @@ code {
   bottom: 0;
   width: 100%;
   height: 2.5rem;
-  background-color: white;
+  background-color: black;
+  color: white;
   text-align: center;
 }
